View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023877 | Open CASCADE | OCCT:Samples | public | 2013-04-05 13:13 | 2013-04-29 15:24 |
Reporter | Assigned To | ||||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023877: Errors in MFC sample HLR. | ||||
Description | There are compile errors in the MFC sample HLR. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
The Git branch CR23877 is ready to be reviewed. Dear apl, please review. |
|
Dear Bugmaster, The changes in branch reviewed without remarks, please proceed. |
|
Tested. There are no compile errors in the MFC sample HLR. |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-04-05 13:13 |
|
New Issue | |
2013-04-05 13:13 |
|
Assigned To | => aba |
2013-04-05 13:13 |
|
Status | new => assigned |
2013-04-05 13:39 |
|
Note Added: 0024014 | |
2013-04-05 13:39 |
|
Assigned To | aba => apl |
2013-04-05 13:39 |
|
Status | assigned => resolved |
2013-04-05 15:14 |
|
Note Added: 0024017 | |
2013-04-05 15:14 |
|
Assigned To | apl => bugmaster |
2013-04-05 15:14 |
|
Status | resolved => reviewed |
2013-04-05 15:36 | apn | Note Added: 0024018 | |
2013-04-05 15:37 | apn | Status | reviewed => tested |
2013-04-05 16:39 |
|
Changeset attached | => occt master ebd1da3d |
2013-04-05 16:39 |
|
Assigned To | bugmaster => aba |
2013-04-05 16:39 |
|
Status | tested => verified |
2013-04-05 16:39 |
|
Resolution | open => fixed |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:24 |
|
Fixed in Version | => 6.6.0 |
2014-01-11 11:59 |
|
Category | OCCT Release:MFC => OCCT Release:Samples |
2014-01-11 12:02 |
|
Category | OCCT Release:Samples => OCCT:Samples |