0023877: Errors in MFC sample HLR